--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    flutter_svg: ^0.18.0
+    
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  provider: ^4.3.3
+  flutter_svg: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -46,9 +48,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -61,12 +63,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Muli
+      fonts:
+        - asset: assets/muli/Muli.ttf
+        - asset: assets/muli/Muli-SemiBold.ttf
+        - asset: assets/muli/Muli-Semi-BoldItalic.ttf
+        - asset: assets/muli/Muli-LightItalic.ttf
+        - asset: assets/muli/Muli-Light.ttf
+        - asset: assets/muli/Muli-ExtraLightItalic.ttf
+        - asset: assets/muli/Muli-ExtraLight.ttf
+        - asset: assets/muli/Muli-BoldItalic.ttf
+        - asset: assets/muli/Muli-Bold.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
